<resources>
    <string name="app_name">AirAid</string>
    <string name="language">Language</string>
    <string name="about_us">About Us</string>
    <string name="complain_box">Complain</string>
    <string name="communicate">Communicate</string>
    <string name="tag_line">the tag line will appear here</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="main_fragment_title">Description of medicines</string>
    <string name="warning">Please choose a clean photo of the prescription.</string>
    <string name="upload_btn">Upload Image</string>
    <string name="medicine_name_field">Medicine Name</string>
    <string name="piece_field">Piece</string>
    <string name="serial_no_one">1.</string>
    <string name="serial_no_two">2.</string>
    <string name="serial_no_three">3.</string>
    <string name="serial_no_four">4.</string>
    <string name="serial_no_five">5.</string>
    <string name="next_btn">Next</string>
    <string name="add_btn">More</string>
    <string name="serial_warning">Please fill the list according to your prescription\'s serial number.</string>
    <string name="address_fragment_title">Address</string>
    <string name="piece_empty_warning">Please enter an amount!</string>
    <string name="home_item_title">Home</string>
    <string name="language_alertdialog_title">Choose Language</string>
    <string name="exit_title">Exit</string>
    <string name="exit_message">Are you sure?</string>
    <string name="exit_yes">YES</string>
    <string name="exit_no">NO</string>
    <string name="fields_empty_warning">Please enter your order first</string>
    <string name="my_orders_title">My orders</string>
    <string name="user_manual_title">User Manual</string>
    <string name="name_field">Name</string>
    <string name="area_field">Area</string>
    <string name="city_field">City</string>
    <string name="others_field">Others</string>
    <string name="number_warning">You must enter your mobile number!</string>
    <string name="order_now">Confirm order!</string>
    <string name="mobile_no_empty_warning">Please enter your mobile number</string>
    <string name="number_valid_warning">Please enter a valid mobile number</string>
    <string name="address_warning">Please enter your address</string>
    <string name="address_valid_warning">Your address is too short</string>
    <string name="app_version">Version 1.0</string>
    <string name="developed_by" translatable="false">Developed By</string>
    <string name="connect_with_us" translatable="false">CONNECT WITH US</string>
    <string name="more_apps" translatable="false">More Apps</string>
    <string name="confirm_dialog_message">Are you sure want to order?</string>
    <string name="confirm_title">Confirm</string>
    <string name="house_no">House/Holding No</string>
    <string name="ward_no">Ward No</string>
    <string name="road_no">Road No</string>
    <string name="colony_field">Colony</string>
    <string name="mobile_no_field">Mobile No</string>
    <string name="total_order">Total Order:</string>
    <string name="mobile_no_title">Mobile No:</string>
</resources>
