<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_language"
            android:title="@string/language" />
    </group>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_complain_box"
                android:icon="@drawable/ic_complain_box"
                android:title="@string/complain_box" />
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_about_us"
                android:title="@string/about_us" />
        </menu>
    </item>
</menu>