<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/medicineField"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:gravity="start"
    android:orientation="horizontal"
    android:weightSum="15">

    <TextView
        android:id="@+id/serialNum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/serial_no_one"
        android:textColor="@color/pureBlack"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/mNameField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_weight="9"
        android:hint="@string/medicine_name_field"
        android:textColor="@color/pureBlack" />

    <EditText
        android:inputType="number"
        android:id="@+id/mPieceField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:hint="@string/piece_field"
        android:textColor="@color/pureBlack" />

</LinearLayout>