<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_main_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_version"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/developed_by"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:clickable="true"
            android:focusable="true"/>
<!--            android:src="@drawable/ic_company" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/connect_with_us"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true" />
<!--                android:onClick=""-->
<!--                android:src="@drawable/ic_facebook_color" />-->

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true" />
<!--                android:onClick=""-->
<!--                android:src="@drawable/ic_twitter_color" />-->

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true" />
<!--                android:onClick=""-->
<!--                android:src="@drawable/ic_linkedin_color" />-->

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:clickable="true"
                android:focusable="true" />
<!--                android:onClick=""-->
<!--                android:src="@drawable/ic_domain" />-->
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            android:padding="15dp"
            android:text="@string/more_apps"
            android:textColor="@color/pureWhite" />
<!--            android:onClick="" />-->

    </LinearLayout>
</ScrollView>