<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_main_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="15dp"
            android:text="@string/main_fragment_title"
            android:textColor="@color/pureBlack"
            android:textSize="25sp"
            android:textStyle="bold" />

        <androidx.cardview.widget.CardView
            android:id="@+id/uploadCV"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            app:cardCornerRadius="18dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_view_bg"
                android:gravity="center">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_upload" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/upload_btn"
                    android:textColor="@color/pureWhite"
                    android:textSize="18sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/imageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

        </LinearLayout>

        <TextView
            android:id="@+id/warningTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:ellipsize="marquee"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/warning"
            android:textColor="@color/img_warning"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/fLayout"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/medicineFieldI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="horizontal"
                android:weightSum="15">

                <TextView
                    android:id="@+id/serialNumI"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/serial_no_one"
                    android:textColor="@color/pureBlack"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/medicineNameFieldI"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="9"
                    android:hint="@string/medicine_name_field"
                    android:textColor="@color/pureBlack" />

                <EditText
                    android:id="@+id/medicinePieceFieldI"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:hint="@string/piece_field"
                    android:inputType="number"
                    android:textColor="@color/pureBlack" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/medicineFieldII"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="horizontal"
                android:weightSum="15">

                <TextView
                    android:id="@+id/serialNumII"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/serial_no_two"
                    android:textColor="@color/pureBlack"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/medicineNameFieldII"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="9"
                    android:hint="@string/medicine_name_field"
                    android:textColor="@color/pureBlack" />

                <EditText
                    android:id="@+id/medicinePieceFieldII"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:inputType="number"
                    android:hint="@string/piece_field"
                    android:textColor="@color/pureBlack" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/medicineFieldIII"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="horizontal"
                android:weightSum="15">

                <TextView
                    android:id="@+id/serialNumIII"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/serial_no_three"
                    android:textColor="@color/pureBlack"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/medicineNameFieldIII"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="9"
                    android:hint="@string/medicine_name_field"
                    android:textColor="@color/pureBlack" />

                <EditText
                    android:id="@+id/medicinePieceFieldIII"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:inputType="number"
                    android:hint="@string/piece_field"
                    android:textColor="@color/pureBlack" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/medicineFieldIV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="horizontal"
                android:weightSum="15">

                <TextView
                    android:id="@+id/serialNumIV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/serial_no_four"
                    android:textColor="@color/pureBlack"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/medicineNameFieldIV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="9"
                    android:hint="@string/medicine_name_field"
                    android:textColor="@color/pureBlack" />

                <EditText
                    android:id="@+id/medicinePieceFieldIV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:inputType="number"
                    android:hint="@string/piece_field"
                    android:textColor="@color/pureBlack" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/medicineFieldV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="horizontal"
                android:weightSum="15">

                <TextView
                    android:id="@+id/serialNumV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/serial_no_five"
                    android:textColor="@color/pureBlack"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/medicineNameFieldV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_weight="9"
                    android:hint="@string/medicine_name_field"
                    android:textColor="@color/pureBlack" />

                <EditText
                    android:id="@+id/medicinePieceFieldV"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:inputType="number"
                    android:hint="@string/piece_field"
                    android:textColor="@color/pureBlack" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:gravity="start">

            <androidx.cardview.widget.CardView
                android:id="@+id/addCV"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/card_view_bg"
                    android:gravity="center">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:text="@string/add_btn"
                        android:textColor="@color/pureWhite"
                        android:textSize="18sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/nextCV"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            app:cardCornerRadius="18dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/card_view_bg"
                android:gravity="center">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_next" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/next_btn"
                    android:textColor="@color/pureWhite"
                    android:textSize="18sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>